--- a/firstwebsite.html
+++ b/firstwebsite.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!-- add basic tags -->
-    <embed width="560" height="315" src="https://www.youtube.com/embed/e6BVMv0yHMg">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/e6BVMv0yHMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <embed width="300" src="https://www.youtube.com/embed/e6BVMv0yHMg">
+    <iframe width="300" src="https://www.youtube.com/embed/e6BVMv0yHMg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <!-- formatting tags -->
     <b>Hello </b><i>World</i>
@@ -27,72 +27,7 @@
             border:solid 2px green;
         }
     </style>
-    <table>
-        <colgroup>
-            <col span="2" style="background-color: cyan;">
-            <col span="3" >
-            <col span="3" style="background-color: yellow">
-            <col span="3" style="background-color: cornflowerblue">
-        </colgroup>
-        <tr>
-            <th colspan="2">Name</th>
-            <th rowspan="2">Mob No.</th>
-            <th rowspan="2">Email</th>
-            <th rowspan="2">Residence Address</th>
-            <th colspan="3">Semester 1</th>
-            <th colspan="3">Semester 2</th>
-        </tr>
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Maths</th>
-            <th>Science</th>
-            <th>Economics</th>
-            <th>Maths</th>
-            <th>Science</th>
-            <th>Economics</th>
-        </tr>
-        <tr>
-            <td>Akash</td>
-            <td>Soni</td>
-            <td>54525235</td>
-            <td>akash@gmail.com</td>
-            <td>Bangalore</td>
-            <td>34</td>
-            <td>75</td>
-            <td>54</td>
-            <td>67</td>
-            <td>67</td>
-            <td>56</td>
-        </tr>
-        <tr>
-            <td>Akash</td>
-            <td>Soni</td>
-            <td>54525235</td>
-            <td>akash@gmail.com</td>
-            <td>Bangalore</td>
-            <td>34</td>
-            <td>75</td>
-            <td>54</td>
-            <td>67</td>
-            <td>67</td>
-            <td>56</td>
-        </tr>
-        <tr>
-            <td>Akash</td>
-            <td>Soni</td>
-            <td>54525235</td>
-            <td>akash@gmail.com</td>
-            <td>Bangalore</td>
-            <td>34</td>
-            <td>75</td>
-            <td>54</td>
-            <td>67</td>
-            <td>67</td>
-            <td>56</td>
-        </tr>
-        <caption>Student Information</caption>
-    </table>
+    
 
     <br><br><hr><br><br>
     <!-- forms -->
